<rdar://problem/10848575> and https://bugs.webkit.org/show_bug.cgi?id=81516 REGRESSION (r107435) URLs copied from WebKit apps aren't in the right pasteboard format

Reviewed by Enrica Casucci.

Source/WebCore:

r107435 started saving/restoring URLs as strings.
We need to go back to setting the URL on the pasteboard using AppKit URL pasteboard APIs.

WebKit API test: ContextMenuCanCopyURL
No WebKit2 API test possible at this time.

* platform/mac/PlatformPasteboardMac.mm:
(WebCore::PlatformPasteboard::setURL):

Tools:

Bring up a context menu on a link, copy the link, then verify the pasteboard contents
are in the correct format.

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/mac/ContextMenuCanCopyURL.html: Added.
* TestWebKitAPI/Tests/mac/ContextMenuCanCopyURL.mm: Added.
(-[ContextMenuCanCopyURLDelegate webView:didFinishLoadForFrame:]):
(TestWebKitAPI::contextMenuCopyLink):
(TestWebKitAPI::TEST):

Canonical link: https://commits.webkit.org/98804@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@111267 268f45cc-cd09-0410-ab3c-d52691b4dbfc